--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -11,54 +11,57 @@
 </div>
 <!--  -->
 
-<div class="table-responsive">
-<table class="table table-hover">
-  <thead >
-    <tr>
-      <th scope="col">Sr no.</th>
-      <th scope="col">Tourist</th>
-      <th scope="col">Places</th>
-      <th scope="col">Booking Date</th>
-      <th scope="col">Duration</th>
-      <th scope="col">Price</th>
-      <th scope="col">People</th>
-      <th scope="col">Tour</th>
-      <th scope="col">Action</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row">1</th>
-      <td>11 Aug'2020</td>
-      <td>20 Aug'2020</td>
-      <td>Arjun kumar singh</td>
-      <td>2000</td>
-      <td>2000</td>
-      <td>2000</td>
-      <td>2000</td>
-      <td>
-        <button class="btn" color="info" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
-          <b>CONTACT TOURIST</b>
-        </button>
-      </td>
-    </tr>
-    <tr>
-      <th scope="row">1</th>
-      <td>11 Aug'2020</td>
-      <td>20 Aug'2020</td>
-      <td>Arjun kumar singh</td>
-      <td>2000</td>
-      <td>2000</td>
-      <td>2000</td>
-      <td>2000</td>
-      <td>
-        <button class="btn" color="info" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
-          <b>CONTACT TOURIST</b>
-        </button>
-      </td>
-    </tr>
-  </tbody>
-</table>
+<div class="card mt-3">
+  <div class="table-responsive card-body">
+    <div class="card-title"><h4>Your Bookings</h4></div>
+    <table class="table table-hover">
+      <thead >
+        <tr>
+          <th scope="col">Sr no.</th>
+          <th scope="col">Tourist</th>
+          <th scope="col">Places</th>
+          <th scope="col">Booking Date</th>
+          <th scope="col">Duration</th>
+          <th scope="col">Price</th>
+          <th scope="col">People</th>
+          <th scope="col">Tour</th>
+          <th scope="col">Action</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">1</th>
+          <td>11 Aug'2020</td>
+          <td>20 Aug'2020</td>
+          <td>Arjun kumar singh</td>
+          <td>2000</td>
+          <td>2000</td>
+          <td>2000</td>
+          <td>2000</td>
+          <td>
+            <button class="btn" color="info" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
+              <b>CONTACT TOURIST</b>
+            </button>
+          </td>
+        </tr>
+        <tr>
+          <th scope="row">1</th>
+          <td>11 Aug'2020</td>
+          <td>20 Aug'2020</td>
+          <td>Arjun kumar singh</td>
+          <td>2000</td>
+          <td>2000</td>
+          <td>2000</td>
+          <td>2000</td>
+          <td>
+            <button class="btn" color="info" style="margin: auto; "  mdbBtn type="button" size="sm" mdbWavesEffect>
+              <b>CONTACT TOURIST</b>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+    </div>
 </div>
 <!-- /table -->
 <!-- <mdb-card>
