--- a/src/app/modules/guide/components/profile/profile.component.html
+++ b/src/app/modules/guide/components/profile/profile.component.html
@@ -1,169 +1,175 @@
-<div class="jumbotron jumbotron-fluid">
+<!-- <div class="jumbotron jumbotron-fluid">
   <div class="container">
     <h1 class="display-4">Edit Profile</h1>
     <p class="lead">The content displying blow will be display to the tourists under your profile see all <a href="">Terms and conditions</a> to overlay
     any conflicts and make your experience greate with <b>Voila</b></p>
   </div>
-</div>
-<hr>
-<div class="row">
-  <div class="col-md-3">
-    <h4 style="color: rgb(3, 168, 244)" >Personal Info</h4> 
+</div> -->
+<!-- <hr> -->
+<div class="card py-5 px-5">
+  <div class="card-body px-0 py-0">
+    <div class="card-title"><h2><b>Edit Profile</b></h2></div>
   </div>
-  <div class="col-md-9">
-    <div class="row">
-      <div class="col-md-11">
-<h5 style="color: rgba(3, 169, 244, 0.7)" >Arjun Kumar Singh</h5>
- </div>
-<div class="col-md-1 edit-btn">
-  <a (click)="editpersonal.show()" ><mdb-icon fas icon="edit"></mdb-icon></a>
-</div>
-     
+  <hr class="mt-0">
+  <div class="row card-body">
+    <div class="col-md-3">
+      <h4 style="color: rgb(3, 168, 244)" >Personal Info</h4> 
     </div>
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-md-11">
+  <h5 style="color: rgba(3, 169, 244, 0.7)" >Arjun Kumar Singh</h5>
+   </div>
+  <div class="col-md-1 edit-btn">
+    <a (click)="editpersonal.show()" ><mdb-icon fas icon="edit"></mdb-icon></a>
+  </div>
+       
+      </div>
+      
+      <div class="row">
+       
+        <div class="col-md-5">
+              <p> <b style="color: rgba(3, 169, 244, 0.7)">Date of birth :-</b>  03-05-2000</p>  
+        </div>
+         <div class="col-md-7">
+          <p> <b style="color: rgba(3, 169, 244, 0.7)">Aadhar Number :-</b>  7589-4564-8428</p> 
+        </div>
+      </div>
+        <p> <b style="color: rgba(3, 169, 244, 0.7)">Email :-</b> architjain808@gmail.com</p>
+        <p> <b style="color: rgba(3, 169, 244, 0.7)"> Phone :-</b> +91-8475848884 , +91-9658741236</p>
+        <div class="row">
+          <div class="col-md-6">
+            <p> <b style="color: rgba(3, 169, 244, 0.7)">State  :-</b>Uttrakhand </p>
+          </div>
+          <div class="col-md-6">
+            <p><b style="color: rgba(3, 169, 244, 0.7)">city :-</b>Rishikesh</p>
+          </div>
+        </div>
+        <p><b style="color: rgba(3, 169, 244, 0.7)">Address :-</b>100, Subhash nagar (bankandi) Rishikesh</p>
+    </div>
+  </div>
+  <hr>
+  <div class="row card-body">
+    <div class="col-md-3">
+      <h4 style="color: rgb(233, 30, 98)" >Experiences</h4>
+    </div>
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-md-11">
+           <div class="row">
+             <div class="col-md-6">
+              <p><b style="color: rgba(233, 30, 99, 0.7)">Work-place :-</b> Voila </p>
+             </div>
+             <div class="col-md-6">
+               <p><b style="color: rgba(233, 30, 99, 0.7)">Work-profile :-</b> Guide </p>
+             </div>
+           </div>  
+           <div class="row">
+            <div class="col-md-6">
+             <p><b style="color: rgba(233, 30, 99, 0.7)">Starting date :-</b> 12-05-2018 </p>
+            </div>
+            <div class="col-md-6">
+              <p><b style="color: rgba(233, 30, 99, 0.7)">Duration :-</b> 6 months </p>
+            </div>
+          </div>    
+           </div>
+        <div class="col-md-1">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
+      </div>
+      <hr>
+      <div class="row">
+        <div class="col-md-11">
+           <div class="row">
+             <div class="col-md-6">
+              <p><b style="color: rgba(233, 30, 99, 0.7)">Work-place :-</b> Voila </p>
+             </div>
+             <div class="col-md-6">
+               <p><b style="color: rgba(233, 30, 99, 0.7)">Work-profile :-</b> Guide </p>
+             </div>
+           </div>  
+           <div class="row">
+            <div class="col-md-6">
+             <p><b style="color: rgba(233, 30, 99, 0.7)">Starting date :-</b> 12-05-2018 </p>
+            </div>
+            <div class="col-md-6">
+              <p><b style="color: rgba(233, 30, 99, 0.7)">Duration :-</b> 6 months </p>
+            </div>
+          </div>    
+           </div>
+        <div class="col-md-1">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
+      </div>
     
-    <div class="row">
-     
-      <div class="col-md-5">
-            <p> <b style="color: rgba(3, 169, 244, 0.7)">Date of birth :-</b>  03-05-2000</p>  
-      </div>
-       <div class="col-md-7">
-        <p> <b style="color: rgba(3, 169, 244, 0.7)">Aadhar Number :-</b>  7589-4564-8428</p> 
-      </div>
+      <a (click)="editexperience.show()"><b style="color: rgb(233, 30, 98)" >+ Add more</b></a>
     </div>
-      <p> <b style="color: rgba(3, 169, 244, 0.7)">Email :-</b> architjain808@gmail.com</p>
-      <p> <b style="color: rgba(3, 169, 244, 0.7)"> Phone :-</b> +91-8475848884 , +91-9658741236</p>
+  </div>
+  <hr>
+  <div class="row card-body">
+    <div class="col-md-3">
+      <h4 style="color: rgb(76, 175, 79)" >Languages</h4>
+    </div>
+    <div class="col-md-9">
       <div class="row">
         <div class="col-md-6">
-          <p> <b style="color: rgba(3, 169, 244, 0.7)">State  :-</b>Uttrakhand </p>
+          <p><b style="color: rgba(76, 175, 80, 0.7)">Hindi</b></p>
         </div>
         <div class="col-md-6">
-          <p><b style="color: rgba(3, 169, 244, 0.7)">city :-</b>Rishikesh</p>
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
         </div>
       </div>
-      <p><b style="color: rgba(3, 169, 244, 0.7)">Address :-</b>100, Subhash nagar (bankandi) Rishikesh</p>
+      <div class="row">
+        <div class="col-md-6">
+          <p><b style="color: rgba(76, 175, 80, 0.7)">English</b></p>
+        </div>
+        <div class="col-md-6">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p><b style="color: rgba(76, 175, 80, 0.7)">spanish</b></p>
+        </div>
+        <div class="col-md-6">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
+      </div>
+      <a (click)="addlanguage.show()"> <b style="color: rgb(76, 175, 79)">+Add more</b> </a>
+    </div>
   </div>
-</div>
-<hr>
-<div class="row">
-  <div class="col-md-3">
-    <h4 style="color: rgb(233, 30, 98)" >Experiences</h4>
-  </div>
-  <div class="col-md-9">
-    <div class="row">
-      <div class="col-md-11">
-         <div class="row">
-           <div class="col-md-6">
-            <p><b style="color: rgba(233, 30, 99, 0.7)">Work-place :-</b> Voila </p>
-           </div>
-           <div class="col-md-6">
-             <p><b style="color: rgba(233, 30, 99, 0.7)">Work-profile :-</b> Guide </p>
-           </div>
-         </div>  
-         <div class="row">
-          <div class="col-md-6">
-           <p><b style="color: rgba(233, 30, 99, 0.7)">Starting date :-</b> 12-05-2018 </p>
-          </div>
-          <div class="col-md-6">
-            <p><b style="color: rgba(233, 30, 99, 0.7)">Duration :-</b> 6 months </p>
-          </div>
-        </div>    
-         </div>
-      <div class="col-md-1">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
+  <hr>
+  <div class="row card-body">
+    <div class="col-md-3">
+      <h4 style="color: rgb(255, 153, 0) " >Intrests</h4>
     </div>
-    <hr>
-    <div class="row">
-      <div class="col-md-11">
-         <div class="row">
-           <div class="col-md-6">
-            <p><b style="color: rgba(233, 30, 99, 0.7)">Work-place :-</b> Voila </p>
-           </div>
-           <div class="col-md-6">
-             <p><b style="color: rgba(233, 30, 99, 0.7)">Work-profile :-</b> Guide </p>
-           </div>
-         </div>  
-         <div class="row">
-          <div class="col-md-6">
-           <p><b style="color: rgba(233, 30, 99, 0.7)">Starting date :-</b> 12-05-2018 </p>
-          </div>
-          <div class="col-md-6">
-            <p><b style="color: rgba(233, 30, 99, 0.7)">Duration :-</b> 6 months </p>
-          </div>
-        </div>    
-         </div>
-      <div class="col-md-1">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+    <div class="col-md-9">
+      <div class="row">
+        <div class="col-md-6">
+          <p><b style="color: rgba(255, 152, 0, 0.7) ">Advanture</b></p>
+        </div>
+        <div class="col-md-6">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
       </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p><b style="color: rgba(255, 152, 0, 0.7) ">Foodie</b></p>
+        </div>
+        <div class="col-md-6">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <p><b style="color: rgba(255, 152, 0, 0.7) ">biking</b></p>
+        </div>
+        <div class="col-md-6">
+          <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
+        </div>
+      </div>
+      <a (click)="addintrest.show()"><b style="color: rgb(255, 153, 0) ">+Add more</b></a>
     </div>
-  
-    <a (click)="editexperience.show()"><b style="color: rgb(233, 30, 98)" >+ Add more</b></a>
-  </div>
-</div>
-<hr>
-<div class="row">
-  <div class="col-md-3">
-    <h4 style="color: rgb(76, 175, 79)" >Languages</h4>
-  </div>
-  <div class="col-md-9">
-    <div class="row">
-      <div class="col-md-6">
-        <p><b style="color: rgba(76, 175, 80, 0.7)">Hindi</b></p>
-      </div>
-      <div class="col-md-6">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <p><b style="color: rgba(76, 175, 80, 0.7)">English</b></p>
-      </div>
-      <div class="col-md-6">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <p><b style="color: rgba(76, 175, 80, 0.7)">spanish</b></p>
-      </div>
-      <div class="col-md-6">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
-    </div>
-    <a (click)="addlanguage.show()"> <b style="color: rgb(76, 175, 79)">+Add more</b> </a>
-  </div>
-</div>
-<hr>
-<div class="row">
-  <div class="col-md-3">
-    <h4 style="color: rgb(255, 153, 0) " >Intrests</h4>
-  </div>
-  <div class="col-md-9">
-    <div class="row">
-      <div class="col-md-6">
-        <p><b style="color: rgba(255, 152, 0, 0.7) ">Advanture</b></p>
-      </div>
-      <div class="col-md-6">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <p><b style="color: rgba(255, 152, 0, 0.7) ">Foodie</b></p>
-      </div>
-      <div class="col-md-6">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <p><b style="color: rgba(255, 152, 0, 0.7) ">biking</b></p>
-      </div>
-      <div class="col-md-6">
-        <a href=""><mdb-icon fas icon="trash-alt" class="red-text pr-3" ></mdb-icon></a>
-      </div>
-    </div>
-    <a (click)="addintrest.show()"><b style="color: rgb(255, 153, 0) ">+Add more</b></a>
   </div>
 </div>
 <!-- edit profile modal -->
