--- a/src/app/modules/guide/components/requests/requests.component.html
+++ b/src/app/modules/guide/components/requests/requests.component.html
@@ -5,7 +5,9 @@
 
   <!--  -->
 
-  <div class="table-responsive">
+<div class="card">
+  <div class="table-responsive card-body">
+    <div class="card-title"><h4>Your Requests</h4></div>
     <table class="table table-hover">
       <thead >
         <tr>
@@ -60,6 +62,7 @@
       </tbody>
     </table>
     </div>  
+</div>
   <!-- /table -->
   
   <!-- <mdb-card >
