--- a/src/app/modules/guide/pages/guide-home/guide-home.component.html
+++ b/src/app/modules/guide/pages/guide-home/guide-home.component.html
@@ -1,11 +1,5 @@
 <div class="row" style="margin: 50px;">
   <div class="col-md-12">
-    <!-- <div class="card">
-      <div class="card-body">
-        This is some text within a panel body.
-      </div>
-    </div><br> -->
-
     <div class="row" >
       <div class="col-md-3 col-sm-3">
         <div class="row">
@@ -16,20 +10,7 @@
                <div class="guid-name">
                  <b>Full Name</b>
                </div>
-            <!-- <div class="btn-group" mdbDropdown style="margin-top: 10px;">
-              <button mdbDropdownToggle type="button" mdbBtn color="default" outline="true" class="dropdown-toggle waves-light"
-                mdbWavesEffect>
-                <b>Name</b>
-              </button>
-            
-              <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item" >EditProfile</a>
-                <a class="dropdown-item" >Manage</a>
-                <a class="dropdown-item" >Logout</a>
-              </div>
-            </div> -->
             <br>
-            <!-- <br> -->
           </div>
         </div>
       
@@ -59,7 +40,7 @@
               <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab"
                 aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
 
-              <a class="nav-link" id="v-pills-changepwd-tab" data-toggle="pill" [routerLink]="['']" routerLinkActive="active" role="tab"
+              <a class="nav-link" id="v-pills-changepwd-tab" data-toggle="pill" [routerLink]="['changepassword']" routerLinkActive="active" role="tab"
               aria-controls="v-pills-changepwd" aria-selected="false">Change Password
             </a>
 
