--- a/src/app/modules/guide/pages/show-register/show-register.component.html
+++ b/src/app/modules/guide/pages/show-register/show-register.component.html
@@ -7,7 +7,7 @@
             <h3>Make money while sharing this love!</h3>
         </div>
         <div class="text-center">
-            <button mdbBtn type="button" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Get Started!</button>
+            <button mdbBtn type="button" (click)="navigateToRegisterPage()" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Get Started!</button>
         </div>
 
 
@@ -128,7 +128,7 @@
             <div style="font-size:18px;">Submit your questionnaire and that’s it! Once we review your application, our team will reach out to you.</div>
         </div>
     </div>
-    <button mdbBtn type="button" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Register as a Voila Guide</button>
+    <button mdbBtn type="button" (click)="navigateToRegisterPage()" rounded="true" style=" border-radius: 25px; text-transform:none; font-size: 17px;" class="white cyan-text font-weight-bold" mdbWavesEffect>Register as a Voila Guide</button>
 </div>
 
 <div class="my-5 mx-3 text-center" style="padding-left:80px; padding-right:80px;">
