--- a/src/app/modules/tourists/components/bookings/bookings.component.html
+++ b/src/app/modules/tourists/components/bookings/bookings.component.html
@@ -45,7 +45,7 @@
 
 
 <!-- /table -->
-<!-- <mdb-card class="booking-card">
+<mdb-card class="booking-card">
     <mdb-card-body>
         <mdb-card-title>
             <mdb-badge class="float-right amy-crisp-gradient" default="true">PERSONALIZED TOUR</mdb-badge>
@@ -94,13 +94,13 @@
                     </div>
                 </div>
 
-            </div> -->
+            </div> 
             <!-- <div>Booking Date: March 25,2020</div> -->
-        <!-- </div>
+         </div>
 
     </mdb-card-body>
     <mdb-card-footer class="text-muted" style="height: 53px;">
         <a href="#!">View more</a>
         <button class="float-right footer-btn" style="margin: auto; " color="danger" ng mdbBtn type="button" size="sm" mdbWavesEffect><b>CANCEL BOOKING</b></button>
     </mdb-card-footer>
-</mdb-card> -->
+</mdb-card>
