--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -13,7 +13,7 @@
 
         <!-- Links -->
         <ul class="navbar-nav ml-auto">
-            <li class="nav-item active" *ngIf="token">
+            <li class="nav-item active" >
                 <a class="nav-link waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="envelope"></mdb-icon> -->
                     Logout
@@ -21,36 +21,36 @@
                 </a>
             </li>
 
-            <li class="nav-item" *ngIf="!token">
+            <li class="nav-item" >
                 <a class="nav-link waves-light" data-toggle="#" data-target="#basicExample" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon fas icon="heart"></mdb-icon>
                 </a>
             </li>
-            <li class="nav-item" *ngIf="!token">
+            <li class="nav-item" >
                 <a class="nav-link waves-light" data-toggle="#" data-target="#basicExample" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon fas icon="envelope"></mdb-icon>
                 </a>
             </li>
-            <li class="nav-item" *ngIf="!token">
+            <li class="nav-item" >
                 <a class="nav-link waves-light" data-toggle="#" data-target="#basicExample" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     <mdb-icon fas icon="calendar-alt"></mdb-icon>Bookings</a>
             </li>
 
-            <li class="nav-item" *ngIf="!token">
+            <li class="nav-item" >
                 <a class="nav-link waves-light" data-toggle="modal" data-target="#basicExample" (click)="frame.show()" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                     LogIn</a>
             </li>
-            <li class="nav-item" *ngIf="!token">
+            <li class="nav-item" >
               <a class="nav-link waves-light"  [routerLink]="['/login']" mdbWavesEffect>
                   <!-- <mdb-icon fas icon="cog"></mdb-icon>  -->
                   LogIn2</a>
           </li>
             <!-- Dropdown -->
-            <li class="nav-item dropdown" dropdown *ngIf="!token">
+            <li class="nav-item dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     Register<span class="caret"></span></a>
@@ -59,7 +59,7 @@
                     <a class="dropdown-item waves-light" mdbWavesEffect [routerLink]="['guideRegister']">Guide</a>
                 </div>
             </li>
-            <li class="nav-item dropdown" dropdown *ngIf="!token">
+            <li class="nav-item dropdown" dropdown >
                 <a dropdownToggle mdbWavesEffect type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
                     <!-- <mdb-icon fas icon="user"></mdb-icon>  -->
                     <mdb-icon fas icon="question-circle"></mdb-icon><span class="caret"></span></a>
