--- a/src/app/modules/guide/components/bookings/bookings.component.html
+++ b/src/app/modules/guide/components/bookings/bookings.component.html
@@ -32,14 +32,14 @@
       <tbody>
         <tr *ngFor="let data of bookingsList; let i = index">
           <th scope="row">{{i+1}}</th>
-          <td>-</td>
-          <td>-</td>
+          <td>{{data.touristId.name}}</td>
+          <td>{{data.places.toString()}}</td>
           <td>{{data.bookingDate | date: 'dd-MM-yyyy'}}</td>
-          <td>-</td>
+          <td>{{data.duration}}</td>
           <td>{{data.price}}</td>
           <td>{{data.noOfPeople}}</td>
           <td>{{data.groupType}}</td>
-          <td>-</td>
+          <td>{{data.tourType}}</td>
           <td>
             <button class="btn" color="info" style="margin: auto;" (click)="contactTourist(data._id)" mdbBtn type="button" size="sm" mdbWavesEffect>
               <b>CONTACT TOURIST</b>
